[gd_scene load_steps=29 format=3 uid="uid://bihfsy1xm51ri"]

[ext_resource type="Script" path="res://scripts/boss.gd" id="1_adgi4"]
[ext_resource type="PackedScene" uid="uid://b8q8qbbycch3v" path="res://scenes/hurtbox.tscn" id="2_msxes"]
[ext_resource type="Texture2D" uid="uid://d0s3scr11jx5x" path="res://assets/craftpix-net-814823-free-roguelike-shoot-em-up-pixel-art-game-kit/1 Main Character/1 Character/Death1.png" id="2_s4qhw"]
[ext_resource type="PackedScene" uid="uid://d6ama5rsu75c" path="res://scenes/hitbox.tscn" id="3_acqxr"]
[ext_resource type="Texture2D" uid="uid://djfwsnqjoixys" path="res://assets/monstres/1 Main Character/1 Character/Walk3.png" id="4_a8w80"]
[ext_resource type="Texture2D" uid="uid://c2fmvptpmabfs" path="res://assets/monstres/1 Main Character/1 Character/Walk2.png" id="5_cl4ef"]
[ext_resource type="Texture2D" uid="uid://7682j4j65mow" path="res://assets/shield.png" id="19_f6doo"]
[ext_resource type="AudioStream" uid="uid://c7tdcx83gcso6" path="res://sounds/hitEnemy.mp3" id="20_kxq7a"]
[ext_resource type="AudioStream" uid="uid://d0jkwqhhnmdkk" path="res://sounds/Intro Gotaga !.mp3" id="21_vipwg"]
[ext_resource type="AudioStream" uid="uid://dxg1gytqi3ymh" path="res://sounds/Doigby - GUERRIER (clip officiel).mp3" id="22_ajysi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nb1jn"]
atlas = ExtResource("2_s4qhw")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwk2a"]
atlas = ExtResource("2_s4qhw")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rrkv"]
atlas = ExtResource("2_s4qhw")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6qju"]
atlas = ExtResource("2_s4qhw")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ng0dx"]
atlas = ExtResource("4_a8w80")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ciitj"]
atlas = ExtResource("4_a8w80")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_exlcj"]
atlas = ExtResource("4_a8w80")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpx8s"]
atlas = ExtResource("4_a8w80")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_afnc4"]
atlas = ExtResource("5_cl4ef")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0gki"]
atlas = ExtResource("5_cl4ef")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j58pc"]
atlas = ExtResource("5_cl4ef")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_361yr"]
atlas = ExtResource("5_cl4ef")
region = Rect2(144, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_qk76n"]
animations = [{
"frames": [],
"loop": true,
"name": &"attack1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nb1jn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwk2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rrkv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6qju")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ng0dx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ciitj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exlcj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpx8s")
}],
"loop": true,
"name": &"walk1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_afnc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0gki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j58pc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_361yr")
}],
"loop": true,
"name": &"walk2",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sxuy2"]
radius = 0.37586
height = 1.28209

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pppx0"]
radius = 3.49665
height = 6.99331

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y11bw"]
radius = 8.80601
height = 20.5102

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o6rr8"]
bg_color = Color(0.0866293, 0.0866292, 0.0866292, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_utba2"]
bg_color = Color(0.556866, 0.0653722, 0.0656533, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="boss" type="CharacterBody2D"]
scale = Vector2(20, 20.165)
collision_layer = 5
collision_mask = 5
motion_mode = 1
script = ExtResource("1_adgi4")
speed = 60.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(0.687743, 0.180574, 0.823073, 1)
texture_filter = 1
position = Vector2(-0.0899764, 0.0332565)
scale = Vector2(0.371251, 0.371251)
sprite_frames = SubResource("SpriteFrames_qk76n")
animation = &"dead"
speed_scale = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.00926363, -0.375924)
scale = Vector2(8.11472, 6.18877)
shape = SubResource("CapsuleShape2D_sxuy2")

[node name="Hurtbox" parent="." instance=ExtResource("2_msxes")]
position = Vector2(-1.03167, 0.0811768)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(1.24093, -0.159552)
scale = Vector2(1.22975, 1.30705)
shape = SubResource("CapsuleShape2D_pppx0")

[node name="Hitbox" parent="." groups=["attack"] instance=ExtResource("3_acqxr")]
position = Vector2(-0.956668, -0.965384)
scale = Vector2(1.03754, 1.05718)
collision_layer = 2
collision_mask = 2
damage = 200

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(1.02736, 0.651397)
scale = Vector2(0.475856, -0.395765)
shape = SubResource("CapsuleShape2D_y11bw")

[node name="Timer" type="Timer" parent="."]

[node name="SuperPower" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[node name="VieBigZombie" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(0.525, 0)
offset_left = -4.44723
offset_top = 6.4163
offset_right = 199.553
offset_bottom = 33.4163
scale = Vector2(0.0342984, 0.0342984)
theme_override_styles/background = SubResource("StyleBoxFlat_o6rr8")
theme_override_styles/fill = SubResource("StyleBoxFlat_utba2")
value = 100.0
show_percentage = false

[node name="Shield" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(-1.05, 3.66972)
texture = ExtResource("19_f6doo")

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("20_kxq7a")
volume_db = -5.0

[node name="gotaga" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("21_vipwg")
autoplay = true

[node name="doigby" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("22_ajysi")
autoplay = true

[connection signal="animation_looped" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_looped"]
[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="Hitbox/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="SuperPower" to="." method="_on_super_power_timeout"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
